--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,102 @@
+body {
+  font-family: "Roboto", sans-serif;
+  background: linear-gradient(
+    109.6deg,
+    rgb(255, 221, 225) 11.2%,
+    rgb(255, 255, 255) 92.2%
+  );
+}
+a {
+  color: grey;
+  transition: all 150ms ease-in-out;
+}
+a:hover {
+  font-size: 14px;
+  cursor: pointer;
+  color: black;
+}
+.container {
+  background: white;
+  max-width: 700px;
+  margin: 45px auto;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 15px;
+  padding: 20px;
+}
+header {
+  border-bottom: 1px solid white;
+  padding: 0 0 30px 0;
+}
 img {
-  width: 80px;
-  display: block;
-  margin: 0 auto;
+  width: 75px;
   border-radius: 20px;
+  margin: 0 5px 10px 5px;
+}
+.search-input {
+  background: rgb(255, 221, 225);
+  border: none;
+  border-radius: 8px;
+  width: 80%;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+.search-btn {
+  padding: 15px 20px;
+  background: rgb(255, 221, 225);
+  font-size: 16px;
+  border: none;
+  border-radius: 8px;
+  width: 15%;
+  color: Grey;
+  transition: all 150ms ease-in-out;
+}
+.search-btn:hover {
+  background: grey;
+  color: rgb(255, 221, 225);
+  cursor: pointer;
+}
+main {
+  padding: 30px;
+}
+
+.forecast-data {
+  display: flex;
+  justify-content: space-between;
+}
+.city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+.forecast-details {
+  font-size: 16px;
+  line-height: 24px;
+  color: grey;
+}
+.forecast-details strong {
+  color: pink;
+}
+.temperature-container {
+  display: flex;
+}
+.forecast-icon {
+  font-size: 44px;
+  margin-top: 22px;
+}
+.forecast-temperature {
+  font-size: 88px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+.forecast-unit {
+  margin-top: 16px;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+footer {
+  border-top: 1px solid white;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 13px;
 }
