--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,33 @@ main {
   font-weight: bold;
 }
 
+.daily-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: grey;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-forecast-icon {
+  font-size: 28px;
+  text-align: center;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: pink;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+.weather-forecast-temp {
+  padding: 0 8px;
+}
+
 footer {
   border-top: 1px solid white;
   padding: 30px 0 0 0;
