--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ img:hover {
   transform: scale(1.2);
 }
 .search-input {
-  background: rgb(255, 221, 225);
+  background: #ffdcf5;
   border: none;
   border-radius: 8px;
   width: 80%;
@@ -46,7 +46,7 @@ img:hover {
 }
 .search-btn {
   padding: 15px 20px;
-  background: rgb(255, 221, 225);
+  background: #ffdcf5;
   font-size: 16px;
   border: none;
   border-radius: 8px;
@@ -56,7 +56,7 @@ img:hover {
 }
 .search-btn:hover {
   background: grey;
-  color: rgb(255, 221, 225);
+  color: #ffdcf5;
   cursor: pointer;
 }
 main {
@@ -111,8 +111,10 @@ main {
   margin-bottom: 10px;
 }
 .weather-forecast-icon {
-  font-size: 28px;
-  text-align: center;
+  width: 60px;
+  height: 60px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temperatures {
   text-align: center;
